# mop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_GO.md  app.go  build_app.sh  build_dev.sh  build_go.sh  config.go  entitlements.plist  go.mod  go.sum  main.go  types.go  ui.go  upnp.go
.claude/: settings.local.json
MOP.app/Contents/: Info.plist
docs/issues/: 2024-12-19-01-dependency-management-violation.md  2024-12-19-02-settings-dialog-implementation-issues.md  2024-12-19-03-upnp-implementation-analysis.md  2024-12-19-04-comprehensive-final-solution.md  2024-12-19-05-tui-implementation-issues.md  2024-12-19-06-device-display-issues.md  2024-12-19-07-upnp-implementation-analysis-issues.md  2024-12-19-08-comprehensive-final-solution.md  2025-01-15-01-upnp-discovery-analysis.md  2025-01-15-02-upnp-discovery-reanalysis.md  2025-01-15-03-comprehensive-solution.md  2025-01-25-01-upnp-discovery-failure.md  2025-01-25-02-upnp-re-analysis.md  2025-01-25-03-comprehensive-final-solution.md  2025-09-05-01-upnp-discovery-failure.md  2025-09-05-02-upnp-discovery-failure-critique.md  2025-09-05-03-upnp-discovery-final-solution.md
docs/plans/: 2026-01-07-log-pane-design.md  2026-01-07-log-pane-implementation.md
rust/: Cargo.toml
rust/src/: app.rs  config.rs  debug_ssdp.rs  macos_permissions.rs  main.rs  network_interfaces.rs  ui.rs  upnp.rs  upnp_ssdp.rs
src/: app.rs  config.rs  discovery_manager.rs  logger.rs  main.rs  network_interfaces.rs  ui.rs  upnp.rs  upnp_ssdp.rs
