[package]
name = "mop"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
url = "2.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
quick-xml = "0.36"
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures-util = "0.3"
once_cell = "1.19"
lru = "0.12"
arboard = "3.4"
rupnp = "3.0.0"
toml = "0.9.5"
dirs = "6.0.0"
tui-input = "0.14.0"
log = "0.4.29"
chrono = "0.4.42"
